sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:5: error: ';' expected but ',' found.
	si ces deux pots sont alignés dans le bon ordre, 
                                                       ^AlgGnomeSort:10: error: ';' expected but symbol literal found.
	si il n'y a pas de pot suivant alors il a terminé sa tâche.
               ^AlgGnomeSort:25: error: ')' expected but 'else' found.
		else
                ^